--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
 <base href="/">
 
 <!--link to bootstrap.css v4.0.0-alpha-->
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <!--<link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">-->
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
